# ShufflePuzzleSolver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Config.h.in  Configuration.h  solve.h  solve_3x3.cpp  solve_4x4.cpp  solver.h
